--- a/src/main.html
+++ b/src/main.html
@@ -37,10 +37,10 @@
       <div class="section-content">
         <div class="results__load">
           <div class="loader"></div>
-          <p class="content-subtitle content-subtitle_results">Идёт поиск новостей...</p>
-          <!--<img src="./images/not-found.svg" alt="Sad smile" class="results__not-found-image">
+          <p class="content-subtitle content-subtitle_load">Идёт поиск новостей...</p>
+          <img src="./images/not-found.svg" alt="Sad smile" class="results__not-found-image">
           <h2 class="content-title content-title_load">Ничего не найдено</h2>
-          <p class="content-subtitle content-subtitle_results">К сожалению по вашему запросу ничего не найдено</p>-->
+          <p class="content-subtitle content-subtitle_load">К сожалению по вашему запросу ничего не найдено</p>
         </div>
         <div class="section-header">
           <h2 class="content-title content-title_section-header">Результаты поиска</h2>
@@ -51,7 +51,7 @@
             <img src="./images/sample.jpg" alt="" class="card__image">
             <div class="card__description">
               <p class="card__date">2 августа, 2019</p>
-              <h3 class="card__news-title">Национальное достояние - парки</h3>
+              <a href="" class="card__news-title">Национальное достояние - парки</a>
               <p class="card__news-text">В 2016 году Америка отмечала важный юбилей: сто лет назад здесь начала
                 складываться
                 система национальных парков – охраняемых территорий, где и сегодня каждый может приобщиться к природе.
@@ -63,7 +63,7 @@
             <img src="./images/sample.jpg" alt="" class="card__image">
             <div class="card__description">
               <p class="card__date">2 августа, 2019</p>
-              <h3 class="card__news-title">Лесные огоньки: история одной фотографии</h3>
+              <a href="" class="card__news-title">Лесные огоньки: история одной фотографии</a>
               <p class="card__news-text">Фотограф отвлеклась от освещения суровой политической реальности Мексики,
                 чтобы
                 запечатлеть ускользающую красоту одного из местных чудес природы.</p>
@@ -74,7 +74,7 @@
             <img src="./images/sample.jpg" alt="" class="card__image">
             <div class="card__description">
               <p class="card__date">2 августа, 2019</p>
-              <h3 class="card__news-title">«Первозданная тайга»: новый фотопроект Игоря Шпиленка</h3>
+              <a href="" class="card__news-title">«Первозданная тайга»: новый фотопроект Игоря Шпиленка</a>
               <p class="card__news-text">Знаменитый фотограф снимает первозданные леса России, чтобы рассказать о
                 необходимости их сохранения. В этот раз он отправился в Двинско-Пинежскую тайгу, где...</p>
               <p class="card__source">РИА</p>
