Adapted for <425px

--- a/src/about.html
+++ b/src/about.html
@@ -96,10 +96,10 @@
                 <a href="" class="menu__link">Яндекс.Практикум</a>
             </menu>
             <div class="footer__social">
-                <a href="" class="footer__link">
+                <a href="" class="footer__social-link">
                     <img src="./images/github-icon.svg" alt="Github icon" class="footer__social-icon">
                 </a>
-                <a href="" class="footer__link">
+                <a href="" class="footer__social-link">
                     <img src="./images/fb-icon.svg" alt="Facebook icon" class="footer__social-icon">
                 </a>
             </div>
