--- a/src/about.html
+++ b/src/about.html
@@ -40,9 +40,9 @@
                         Это
                         современных подход к разработке сайтов. Код оптимизируется, а значит, сайт работает быстрее.
                         Также
-                        настроена сайт работает в старых браузерах. Даже если посетители — пользователи старых
+                        настроена работа сайта в старых браузерах. Даже если посетители — пользователи старых
                         операционных
-                        систем у них не будет проблем с отображением. А значит потенциальная аудитория возрастает.</p>
+                        систем — у них не будет проблем с отображением. А значит потенциальная аудитория возрастает.</p>
                     <p class="for-customers__paragraph">Проект был проверен экспертами Яндекс.Практикума. И если вашему
                         бизесу нужен сайт, мы рекомендуем обратиться к этому студенту.</p>
                 </div>
