--- a/src/main.html
+++ b/src/main.html
@@ -8,7 +8,7 @@
   <meta name="author" content="Evgeniy Lobanov">
   <title>NewsAnalyzer</title>
   <link rel="icon" type="image/png" href="./images/favicon.png" />
-  <link rel="stylesheet" href="./pages/main.css">
+  <link rel="stylesheet" href="<%=htmlWebpackPlugin.files.chunks.main.css%>">
 </head>
 
 <body>
