--- a/pages/paper.html
+++ b/pages/paper.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Evgeniy Lobanov">
     <title>NewsAnalyzer</title>
     <link rel="icon" type="image/png" href="./images/favicon.png" />
-    <link rel="stylesheet" href="index.800bc718d2111d16aae9.css">
+    <link rel="stylesheet" href="../index.800bc718d2111d16aae9.css">
 </head>
 
 <body>
