--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Evgeniy Lobanov">
     <title>NewsAnalyzer</title>
     <link rel="icon" type="image/png" href="./images/favicon.png" />
-    <link rel="stylesheet" href="../index.800bc718d2111d16aae9.css">
+    <link rel="stylesheet" href="index.f3e3d36ae232a63981dd.css">
 </head>
 
 <body>
@@ -16,7 +16,7 @@
             <header class="header">
                 <p class="header__logo">NewsAnalyzer</p>
                 <nav class="header__page-links">
-                    <a href="./main.html" class="header__page header__page_theme_dark">Главная</a>
+                    <a href="./index.html" class="header__page header__page_theme_dark">Главная</a>
                     <a href="./about.html" class="header__page header__page_theme_dark header__page_current">О
                         проекте</a>
                 </nav>
@@ -86,12 +86,50 @@
                     <h2 class="content-title content-title_section-header">История коммитов из GitHub</h2>
                     <a href="" class="section-header__link">Открыть в GitHub &gt;</a>
                 </div>
+                <div class="main-carousel" data-flickity='{ "cellAlign": "left", "contain": true }'>
+                    <div class="carousel-cell">
+                        <p class="commits__date">14 августа, 2019</p>
+                        <div class="commits__about-author">
+                            <img src="" alt="" class="commits__author-photo">
+                            <div class="commits__header">
+                                <h3 class="commits__author-name">Имя</h3>
+                                <p class="commits__author-email">Email</p>
+                            </div>
+                        </div>
+                        <p class="commits__text">With Emmet, you can type CSS-like expressions that can be
+                            dynamically parsed, and produce output depending on what you type in the abb...</p>
+                    </div>
+                    <div class="carousel-cell">
+                        <p class="commits__date">14 августа, 2019</p>
+                        <div class="commits__about-author">
+                            <img src="" alt="" class="commits__author-photo">
+                            <div class="commits__header">
+                                <h3 class="commits__author-name">Имя</h3>
+                                <p class="commits__author-email">Email</p>
+                            </div>
+                        </div>
+                        <p class="commits__text">With Emmet, you can type CSS-like expressions that can be
+                            dynamically parsed, and produce output depending on what you type in the abb...</p>
+                    </div>
+                    <div class="carousel-cell">
+                        <p class="commits__date">14 августа, 2019</p>
+                        <div class="commits__about-author">
+                            <img src="" alt="" class="commits__author-photo">
+                            <div class="commits__header">
+                                <h3 class="commits__author-name">Имя</h3>
+                                <p class="commits__author-email">Email</p>
+                            </div>
+                        </div>
+                        <p class="commits__text">With Emmet, you can type CSS-like expressions that can be
+                            dynamically parsed, and produce output depending on what you type in the abb...</p>
+                    </div>
+                </div>
             </div>
         </section>
         <footer class="footer">
             <p class="footer__copyright">&copy; 2020 Supersite</p>
             <menu class="menu">
-                <a href="./main.html" class="menu__link">Главная</a>
+                <a href="./index.html" class="menu__link">Главная</a>
                 <a href="./about.html" class="menu__link">О проекте</a>
                 <a href="" class="menu__link">Яндекс.Практикум</a>
             </menu>
