--- a/paper.html
+++ b/paper.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Evgeniy Lobanov">
     <title>NewsAnalyzer</title>
     <link rel="icon" type="image/png" href="./images/favicon.png" />
-    <link rel="stylesheet" href="../index.800bc718d2111d16aae9.css">
+    <link rel="stylesheet" href="index.f3e3d36ae232a63981dd.css">
 </head>
 
 <body>
@@ -17,14 +17,14 @@
             <header class="header">
                 <p class="header__logo">NewsAnalyzer</p>
                 <nav class="header__page-links">
-                    <a href="./main.html" class="header__page header__page_theme_dark">Главная</a>
+                    <a href="./index.html" class="header__page header__page_theme_dark">Главная</a>
                     <a href="./about.html" class="header__page header__page_theme_dark">О проекте</a>
                 </nav>
             </header>
             <div class="rectangle"></div>
             <div class="section-content">
                 <p class="summary__path">
-                    <a href="./main.html" class="summary__main-page-link">Главная</a> <span
+                    <a href="./index.html" class="summary__main-page-link">Главная</a> <span
                         class="summary__current-page">/ Аналитика</span>
                 </p>
                 <h1 class="content-title content-title_summary">Вы спросили: &laquo;<span
@@ -106,7 +106,7 @@
         <footer class="footer">
             <p class="footer__copyright">&copy; 2020 Supersite</p>
             <menu class="menu">
-                <a href="./main.html" class="menu__link">Главная</a>
+                <a href="./index.html" class="menu__link">Главная</a>
                 <a href="./about.html" class="menu__link">О проекте</a>
                 <a href="" class="menu__link">Яндекс.Практикум</a>
             </menu>
