--- a/paper.html
+++ b/paper.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Evgeniy Lobanov">
     <title>NewsAnalyzer</title>
     <link rel="icon" type="image/png" href="./images/favicon.png" />
-    <link rel="stylesheet" href="index.f3e3d36ae232a63981dd.css">
+    <link rel="stylesheet" href="index.63c230a038782b9e82c4.css">
 </head>
 
 <body>
@@ -120,6 +120,7 @@
             </div>
         </footer>
     </div>
+    <script type="module" src="main.a071ff99334c45253682.js"></script>
 </body>
 
 </html>
