--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Evgeniy Lobanov">
     <title>NewsAnalyzer</title>
     <link rel="icon" type="image/png" href="./images/favicon.png" />
-    <link rel="stylesheet" href="index.f3e3d36ae232a63981dd.css">
+    <link rel="stylesheet" href="index.63c230a038782b9e82c4.css">
 </head>
 
 <body>
@@ -84,7 +84,7 @@
             <div class="section-content">
                 <div class="section-header">
                     <h2 class="content-title content-title_section-header">История коммитов из GitHub</h2>
-                    <a href="" class="section-header__link">Открыть в GitHub &gt;</a>
+                    <a href="" class="section-header__link section-header__link_commits">Открыть в GitHub &gt;</a>
                 </div>
                 <div class="main-carousel" data-flickity='{ "cellAlign": "left", "contain": true }'>
                     <div class="carousel-cell">
@@ -123,7 +123,44 @@
                         <p class="commits__text">With Emmet, you can type CSS-like expressions that can be
                             dynamically parsed, and produce output depending on what you type in the abb...</p>
                     </div>
+                    <div class="carousel-cell">
+                        <p class="commits__date">14 августа, 2019</p>
+                        <div class="commits__about-author">
+                            <img src="" alt="" class="commits__author-photo">
+                            <div class="commits__header">
+                                <h3 class="commits__author-name">Имя</h3>
+                                <p class="commits__author-email">Email</p>
+                            </div>
+                        </div>
+                        <p class="commits__text">With Emmet, you can type CSS-like expressions that can be
+                            dynamically parsed, and produce output depending on what you type in the abb...</p>
+                    </div>
+                    <div class="carousel-cell">
+                        <p class="commits__date">14 августа, 2019</p>
+                        <div class="commits__about-author">
+                            <img src="" alt="" class="commits__author-photo">
+                            <div class="commits__header">
+                                <h3 class="commits__author-name">Имя</h3>
+                                <p class="commits__author-email">Email</p>
+                            </div>
+                        </div>
+                        <p class="commits__text">With Emmet, you can type CSS-like expressions that can be
+                            dynamically parsed, and produce output depending on what you type in the abb...</p>
+                    </div>
+                    <div class="carousel-cell">
+                        <p class="commits__date">14 августа, 2019</p>
+                        <div class="commits__about-author">
+                            <img src="" alt="" class="commits__author-photo">
+                            <div class="commits__header">
+                                <h3 class="commits__author-name">Имя</h3>
+                                <p class="commits__author-email">Email</p>
+                            </div>
+                        </div>
+                        <p class="commits__text">With Emmet, you can type CSS-like expressions that can be
+                            dynamically parsed, and produce output depending on what you type in the abb...</p>
+                    </div>
                 </div>
+                <button type="submit" class="button button_open-link">Открыть в GitHub</button>
             </div>
         </section>
         <footer class="footer">
@@ -143,6 +180,8 @@
             </div>
         </footer>
     </div>
+    <script src="./flickity.pkgd.min.js"></script>
+    <script type="module" src="main.a071ff99334c45253682.js"></script>
 </body>
 
 </html>
