--- a/src/about.html
+++ b/src/about.html
@@ -16,7 +16,7 @@
             <header class="header">
                 <p class="header__logo">NewsAnalyzer</p>
                 <nav class="header__page-links">
-                    <a href="./main.html" class="header__page header__page_theme_dark">Главная</a>
+                    <a href="./index.html" class="header__page header__page_theme_dark">Главная</a>
                     <a href="./about.html" class="header__page header__page_theme_dark header__page_current">О
                         проекте</a>
                 </nav>
@@ -84,14 +84,89 @@
             <div class="section-content">
                 <div class="section-header">
                     <h2 class="content-title content-title_section-header">История коммитов из GitHub</h2>
-                    <a href="" class="section-header__link">Открыть в GitHub &gt;</a>
+                    <a href="" class="section-header__link section-header__link_commits">Открыть в GitHub &gt;</a>
                 </div>
+                <div class="main-carousel" data-flickity='{ "cellAlign": "left", "contain": true }'>
+                    <div class="carousel-cell">
+                        <p class="commits__date">14 августа, 2019</p>
+                        <div class="commits__about-author">
+                            <img src="" alt="" class="commits__author-photo">
+                            <div class="commits__header">
+                                <h3 class="commits__author-name">Имя</h3>
+                                <p class="commits__author-email">Email</p>
+                            </div>
+                        </div>
+                        <p class="commits__text">With Emmet, you can type CSS-like expressions that can be
+                            dynamically parsed, and produce output depending on what you type in the abb...</p>
+                    </div>
+                    <div class="carousel-cell">
+                        <p class="commits__date">14 августа, 2019</p>
+                        <div class="commits__about-author">
+                            <img src="" alt="" class="commits__author-photo">
+                            <div class="commits__header">
+                                <h3 class="commits__author-name">Имя</h3>
+                                <p class="commits__author-email">Email</p>
+                            </div>
+                        </div>
+                        <p class="commits__text">With Emmet, you can type CSS-like expressions that can be
+                            dynamically parsed, and produce output depending on what you type in the abb...</p>
+                    </div>
+                    <div class="carousel-cell">
+                        <p class="commits__date">14 августа, 2019</p>
+                        <div class="commits__about-author">
+                            <img src="" alt="" class="commits__author-photo">
+                            <div class="commits__header">
+                                <h3 class="commits__author-name">Имя</h3>
+                                <p class="commits__author-email">Email</p>
+                            </div>
+                        </div>
+                        <p class="commits__text">With Emmet, you can type CSS-like expressions that can be
+                            dynamically parsed, and produce output depending on what you type in the abb...</p>
+                    </div>
+                    <div class="carousel-cell">
+                        <p class="commits__date">14 августа, 2019</p>
+                        <div class="commits__about-author">
+                            <img src="" alt="" class="commits__author-photo">
+                            <div class="commits__header">
+                                <h3 class="commits__author-name">Имя</h3>
+                                <p class="commits__author-email">Email</p>
+                            </div>
+                        </div>
+                        <p class="commits__text">With Emmet, you can type CSS-like expressions that can be
+                            dynamically parsed, and produce output depending on what you type in the abb...</p>
+                    </div>
+                    <div class="carousel-cell">
+                        <p class="commits__date">14 августа, 2019</p>
+                        <div class="commits__about-author">
+                            <img src="" alt="" class="commits__author-photo">
+                            <div class="commits__header">
+                                <h3 class="commits__author-name">Имя</h3>
+                                <p class="commits__author-email">Email</p>
+                            </div>
+                        </div>
+                        <p class="commits__text">With Emmet, you can type CSS-like expressions that can be
+                            dynamically parsed, and produce output depending on what you type in the abb...</p>
+                    </div>
+                    <div class="carousel-cell">
+                        <p class="commits__date">14 августа, 2019</p>
+                        <div class="commits__about-author">
+                            <img src="" alt="" class="commits__author-photo">
+                            <div class="commits__header">
+                                <h3 class="commits__author-name">Имя</h3>
+                                <p class="commits__author-email">Email</p>
+                            </div>
+                        </div>
+                        <p class="commits__text">With Emmet, you can type CSS-like expressions that can be
+                            dynamically parsed, and produce output depending on what you type in the abb...</p>
+                    </div>
+                </div>
+                <button type="submit" class="button button_open-link">Открыть в GitHub</button>
             </div>
         </section>
         <footer class="footer">
             <p class="footer__copyright">&copy; 2020 Supersite</p>
             <menu class="menu">
-                <a href="./main.html" class="menu__link">Главная</a>
+                <a href="./index.html" class="menu__link">Главная</a>
                 <a href="./about.html" class="menu__link">О проекте</a>
                 <a href="" class="menu__link">Яндекс.Практикум</a>
             </menu>
@@ -105,6 +180,8 @@
             </div>
         </footer>
     </div>
+    <script src="./flickity.pkgd.min.js"></script>
+    <script type="module" src="<%=htmlWebpackPlugin.files.chunks.main.entry%>"></script>
 </body>
 
 </html>
