--- a/src/paper.html
+++ b/src/paper.html
@@ -21,8 +21,12 @@
                     <a href="./about.html" class="header__page header__page_theme_dark">О проекте</a>
                 </nav>
             </header>
-            <div class="rectangle"></div>
             <div class="section-content">
+                <ul class="path path_summary">
+                    <li><a href="./index.html" class="path__link">Главная</a></li>
+                    <li><a href="./index.html" class="path__link">Главная</a></li>
+                    <li>Аналитика</li>
+                </ul>
                 <p class="summary__path">
                     <a href="./index.html" class="summary__main-page-link">Главная</a> <span
                         class="summary__current-page">/ Аналитика</span>
