Fixed some bugs

--- a/src/main.html
+++ b/src/main.html
@@ -97,16 +97,12 @@
       <menu class="menu">
         <a href="./index.html" class="menu__link">Главная</a>
         <a href="./about.html" class="menu__link">О проекте</a>
-        <a href="" class="menu__link">Яндекс.Практикум</a>
+        <a href="https://praktikum.yandex.ru/" class="menu__link">Яндекс.Практикум</a>
       </menu>
-      <div class="footer__social">
-        <a href="" class="footer__social-link">
-          <img src="./images/github-icon.svg" alt="Github icon" class="footer__social-icon">
-        </a>
-        <a href="" class="footer__social-link">
-          <img src="./images/fb-icon.svg" alt="Facebook icon" class="footer__social-icon">
-        </a>
-      </div>
+      <ul class="footer__social">
+        <li><a href=""><img src="./images/github-icon.svg" alt="Github icon" class="footer__social-icon"></a></li>
+        <li><a href=""><img src="./images/fb-icon.svg" alt="Facebook icon" class="footer__social-icon"></a></li>
+      </ul>
     </footer>
   </div>
   <script type="module" src="<%=htmlWebpackPlugin.files.chunks.main.entry%>"></script>
