Fixed bugs after rewiev

--- a/src/about.html
+++ b/src/about.html
@@ -175,7 +175,7 @@
             </ul>
         </footer>
     </div>
-    <script type="module" src="<%=htmlWebpackPlugin.files.chunks.main.entry%>"></script>
+    <script type="module" src="<%=htmlWebpackPlugin.files.chunks.about.entry%>"></script>
 </body>
 
 </html>
