--- a/src/paper.html
+++ b/src/paper.html
@@ -98,7 +98,7 @@
             </ul>
         </footer>
     </div>
-    <script type="module" src="<%=htmlWebpackPlugin.files.chunks.main.entry%>"></script>
+    <script type="module" src="<%=htmlWebpackPlugin.files.chunks.paper.entry%>"></script>
 </body>
 
 </html>
