--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Evgeniy Lobanov">
     <title>NewsAnalyzer</title>
     <link rel="icon" type="image/png" href="./images/favicon.png" />
-    <link rel="stylesheet" href="index.73fdf8737253bce5b461.css">
+    <link rel="stylesheet" href="./assets/about.5948beb5f6edbb336422.css">
 </head>
 
 <body>
@@ -21,7 +21,6 @@
                         проекте</a>
                 </nav>
             </header>
-            <div class="rectangle"></div>
             <div class="section-content">
                 <h2 class="content-title content-title_for-customers">Клиентам</h2>
                 <div class="for-customers__text">
@@ -168,19 +167,15 @@
             <menu class="menu">
                 <a href="./index.html" class="menu__link">Главная</a>
                 <a href="./about.html" class="menu__link">О проекте</a>
-                <a href="" class="menu__link">Яндекс.Практикум</a>
+                <a href="https://praktikum.yandex.ru/" class="menu__link">Яндекс.Практикум</a>
             </menu>
-            <div class="footer__social">
-                <a href="" class="footer__social-link">
-                    <img src="./images/github-icon.svg" alt="Github icon" class="footer__social-icon">
-                </a>
-                <a href="" class="footer__social-link">
-                    <img src="./images/fb-icon.svg" alt="Facebook icon" class="footer__social-icon">
-                </a>
-            </div>
+            <ul class="footer__social">
+                <li><a href=""><img src="./images/github-icon.svg" alt="Github icon" class="footer__social-icon"></a></li>
+                <li><a href=""><img src="./images/fb-icon.svg" alt="Facebook icon" class="footer__social-icon"></a></li>
+            </ul>
         </footer>
     </div>
-    <script type="module" src="main.32db096fd7c3469fe5e2.js"></script>
+    <script type="module" src="./assets/about.73256c2e7b1a841c5d7d.js"></script>
 </body>
 
 </html>
