--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="author" content="Evgeniy Lobanov">
   <title>NewsAnalyzer</title>
   <link rel="icon" type="image/png" href="./images/favicon.png" />
-  <link rel="stylesheet" href="index.73fdf8737253bce5b461.css">
+  <link rel="stylesheet" href="./assets/main.45bf56da5feb545bd25d.css">
 </head>
 
 <body>
@@ -21,7 +21,6 @@
           <a href="./about.html" class="header__page header__page_theme_light">О проекте</a>
         </nav>
       </header>
-      <div class="rectangle"></div>
       <div class="section-content">
         <h1 class="content-title content-title_search">Что в мире творится?</h1>
         <p class="content-subtitle content-subtitle_search">Введите в поиске любую тему и узнайте, насколько популярной
@@ -98,19 +97,15 @@
       <menu class="menu">
         <a href="./index.html" class="menu__link">Главная</a>
         <a href="./about.html" class="menu__link">О проекте</a>
-        <a href="" class="menu__link">Яндекс.Практикум</a>
+        <a href="https://praktikum.yandex.ru/" class="menu__link">Яндекс.Практикум</a>
       </menu>
-      <div class="footer__social">
-        <a href="" class="footer__social-link">
-          <img src="./images/github-icon.svg" alt="Github icon" class="footer__social-icon">
-        </a>
-        <a href="" class="footer__social-link">
-          <img src="./images/fb-icon.svg" alt="Facebook icon" class="footer__social-icon">
-        </a>
-      </div>
+      <ul class="footer__social">
+        <li><a href=""><img src="./images/github-icon.svg" alt="Github icon" class="footer__social-icon"></a></li>
+        <li><a href=""><img src="./images/fb-icon.svg" alt="Facebook icon" class="footer__social-icon"></a></li>
+      </ul>
     </footer>
   </div>
-  <script type="module" src="main.32db096fd7c3469fe5e2.js"></script>
+  <script type="module" src="./assets/main.7429feff1645efbb085c.js"></script>
 </body>
 
 </html>
