Edited file structure

--- a/src/about.html
+++ b/src/about.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Evgeniy Lobanov">
     <title>NewsAnalyzer</title>
     <link rel="icon" type="image/png" href="./images/favicon.png" />
-    <link rel="stylesheet" href="<%=htmlWebpackPlugin.files.chunks.about.css%>">
+    <link rel="stylesheet" href="<%=htmlWebpackPlugin.files.chunks.main.css%>">
 </head>
 
 <body>
@@ -175,7 +175,7 @@
             </ul>
         </footer>
     </div>
-    <script type="module" src="<%=htmlWebpackPlugin.files.chunks.about.entry%>"></script>
+    <script type="module" src="<%=htmlWebpackPlugin.files.chunks.main.entry%>"></script>
 </body>
 
 </html>
