--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
         </div>
         <div class="section-header">
           <h2 class="content-title content-title_section-header">Результаты поиска</h2>
-          <a href="./paper.html" class="section-header__link">Посмотреть аналитику &gt;</a>
+          <a href="./analytics.html" class="section-header__link">Посмотреть аналитику &gt;</a>
         </div>
         <div class="results__news-cards">
           <div class="card">
