--- a/src/analytics.html
+++ b/src/analytics.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Evgeniy Lobanov">
     <title>NewsAnalyzer</title>
     <link rel="icon" type="image/png" href="./images/favicon.png" />
-    <link rel="stylesheet" href="<%=htmlWebpackPlugin.files.chunks.paper.css%>">
+    <link rel="stylesheet" href="<%=htmlWebpackPlugin.files.chunks.main.css%>">
 </head>
 
 <body>
@@ -98,7 +98,7 @@
             </ul>
         </footer>
     </div>
-    <script type="module" src="<%=htmlWebpackPlugin.files.chunks.paper.entry%>"></script>
+    <script type="module" src="<%=htmlWebpackPlugin.files.chunks.main.entry%>"></script>
 </body>
 
 </html>
