--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Evgeniy Lobanov">
     <title>NewsAnalyzer</title>
     <link rel="icon" type="image/png" href="./images/favicon.png" />
-    <link rel="stylesheet" href="./assets/about.5948beb5f6edbb336422.css">
+    <link rel="stylesheet" href="./assets/about.2ee7398834ecb40caa44.css">
 </head>
 
 <body>
@@ -175,7 +175,7 @@
             </ul>
         </footer>
     </div>
-    <script type="module" src="./assets/about.73256c2e7b1a841c5d7d.js"></script>
+    <script type="module" src="./assets/index.73256c2e7b1a841c5d7d.js"></script>
 </body>
 
 </html>
