--- a/analytics.html
+++ b/analytics.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Evgeniy Lobanov">
     <title>NewsAnalyzer</title>
     <link rel="icon" type="image/png" href="./images/favicon.png" />
-    <link rel="stylesheet" href="./assets/paper.37cd6446a3542ea441e8.css">
+    <link rel="stylesheet" href="./assets/analytics.2ce0cb63d71d46c8940f.css">
 </head>
 
 <body>
@@ -98,7 +98,7 @@
             </ul>
         </footer>
     </div>
-    <script type="module" src="./assets/paper.e0945d5be482dd93f2ca.js"></script>
+    <script type="module" src="./assets/index.58d83c547b5fd8e3224c.js"></script>
 </body>
 
 </html>
